--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="image/IMG-20240827-WA0022.jpg" alt="">
+            <img src="IMG-20240827-WA0022.jpg" alt="">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
