--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="home-imgHover">
             <div class="home-imgHover1">
-            <img src="about2.png" alt="">
+            <img src="IMG-20240827-WA0022.jpg" alt="">
             </div>
         </div>
     </section>
