--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="portfolio-content">
                     <div class="row">
                         <a></a>
-                        <img src="Project1.png">
+                        <img src="IMG-20240827-WA0021.jpg">
                         <div class="layer">
                             <h5>Calculator</h5>
                             <p>A calculator is an electronic device used for mathematical calculations, ranging from basic arithmetic to complex equations. It typically features a keypad, display screen, and memory functions. Calculators simplify calculations, save time, and increase accuracy, making them an essential tool for students, professionals, and everyday users alike.</p>
@@ -213,7 +213,7 @@
                     </div>
 
                     <div class="row">
-                        <img src="Project2.jpg">
+                        <img src="IMG-20240827-WA0019.jpg">
                         <div class="layer">
                             <h5>JARVIS</h5>
                             <p>Python's text-to-speech (TTS) function, also known as gTTS (Google Text-to-Speech), converts written text into spoken words. It uses the Python library gtts and gTTS to generate audio files or stream speech directly. This functionality is useful for applications like voice assistants, audiobooks, and accessibility tools for visually impaired users.
