--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </div>
 
                     <div class="row">
-                        <img src="IMG-20240827-WA0002.jpg">
+                        <img src="IMG-20240827-WA0002.JPG">
                         <div class="layer">
                             <h5>Password Generator</h5>
                             <p>A password generator is a tool that creates unique, complex passwords for secure login credentials. It typically uses algorithms to combine random characters, numbers, and special symbols, producing strong, hard-to-guess passwords. This helps protect against hacking and cyber threats, ensuring online security and peace of mind for users.
